Titel in picture, which was cropped, fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
   margin-top: -350px;
   position: absolute;
   clip: rect(300px, 1500px, 500px, 0);
+  z-index: -1;
     }
 
 .header-bg {
@@ -56,6 +57,7 @@ animation: fadeIn ease 2s;
 
 .header-box1 {
     margin-top: 25vh;
+    text-align: center;
     color: black;
     background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.7) 21.41%, rgba(255, 255, 255, 0.7) 78.6%, rgba(255, 255, 255, 0) 100%);
    }
